@@ -2,6 +2,8 @@ CMF 1.6.3-beta (unreleased)
 
   Bug Fixes
 
+    - CMFCalendar: Refactored test setup to fix test breakage for Zope 2.9.
+
     - CMFDefault: The "Sample CMF Content" GenericSetup profile was 
       registered but missing all of its files and necessary interface 
       declarations in the CMFDefault content classes.
